@@ -34,6 +34,13 @@ Version 0.7.2 UNRELEASED
     (same as downloads) and Blue.  Since Blue is used in the menus, Yellow/Brown
     is probably better; Downgrades and Downloads are never on the same screen.
 
+  * Log file now contains version information for most actions (Closes: #222585)
+
+    Previously it only contained version information for upgrades and
+    downgrades, both current (old) and candidate (new) versions.  Now most
+    actions show version information, either the candidate version
+    (e.g. install, auto install) or current version (remove, hold, ...).
+
 - Bug fixes:
 
   * Disable strings gathered for translation (Closes: #790568)
